--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     ],
     "license": "BSD-3-Clause",
     "require": {
-        "silverstripe/framework": "^5.0"
+        "silverstripe/framework": "^5.0",
+        "sunnysideup/download": "dev-main",
+        "ext-zip": "*"
     },
     "require-dev": {
         "silverleague/ideannotator": "*"
